<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectionsFragment"
    tools:layout_editor_absoluteX="-158dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/directionsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="399dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="92dp"
        android:layout_height="60dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/skip_button" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="92dp"
        android:layout_height="60dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="16dp"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="Previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/skip_button" />

    <TextView
        android:id="@+id/current_dest_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current Destination:"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/next_dest_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next Destination:"
        android:textColor="#000000"

        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/current_dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <EditText
        android:id="@+id/next_dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <ImageButton
        android:id="@+id/directions_settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:src="@android:drawable/ic_menu_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/latTextView"
        android:layout_width="222dp"
        android:layout_height="37dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/previous_button"
        tools:layout_editor_absoluteX="7dp" />

    <EditText
        android:id="@+id/lngTextView"
        android:layout_width="222dp"
        android:layout_height="37dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="Lng"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/previous_button"
        tools:layout_editor_absoluteX="7dp" />

    <Button
        android:id="@+id/mock_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="13dp"
        android:text="Mock"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>